syntax = "proto3";
import "user.proto";
import "service/service.proto";
import "signaling.proto";

message Message {
  uint32 senderId = 1;
  uint32 recipientId = 2;
  bool isService = 3;
  bytes content = 4;
  Meta meta = 5;
}

message Meta {
  uint32 timestamp = 1;
}
